--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,30 @@
+asgiref==3.2.10
+click==7.1.2
+cycler==0.10.0
+Django==3.1.2
 Flask==1.1.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
+joblib==1.0.1
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
+matplotlib==3.3.3
+nltk==3.6.2
+numpy==1.19.4
+pandas==1.1.4
+pickle-mixin==1.0.2
+Pillow==8.0.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+regex==2021.4.4
+scikit-learn==0.24.2
+scipy==1.5.4
+seaborn==0.11.0
+six==1.15.0
+sqlparse==0.4.0
+threadpoolctl==2.1.0
+tqdm==4.61.1
 Werkzeug==1.0.1
-numpy>=1.19.2
-scipy>=1.5.2
-scikit-learn>=0.23.2
-matplotlib>=3.3.2
-pandas>=1.1.3
-wordnet
-
-
-joblib~=1.0.1
+wordcloud==1.8.1
