--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ joblib==1.0.1
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.3
-nltk==3.6.2
+nltk.txt
 numpy==1.19.4
 pandas==1.1.4
 pickle-mixin==1.0.2
